# extensible-uri

./: COPYING  GNUmakefile  README.rst  cabal-package.mk  extensible-uri.cabal
Codec/URI/: PercentEncoding.hs
Data/: URI.hs
Data/URI/: Internal.hs
Data/URI/Internal/: Host.hs  Scheme.hs  UserInfo.hs
Data/URI/Internal/Host/: IPv4.hs  IPv6.hs
Test/Data/URI/: Host.hs
tests/: Main.hs
tests/Test/Data/URI/: Host.hs
tests/Test/Data/URI/Internal/: Host.hs
