Name:          extensible-uri
Synopsis:      Generic URIs that can be specialised to specific schemes
Description:
    .
    The purpose of this library is to provide an uniform way to
    manipulate generic and scheme-specific URIs in a type-safe and
    RFC-compliant manner.
    .
Version:       0.1
License:       PublicDomain
License-File:  COPYING
Author:        PHO <pho at cielonegro dot org>
Maintainer:    PHO <pho at cielonegro dot org>
Stability:     experimental
Homepage:      https://github.com/phonohawk/extensible-uri
Bug-Reports:   https://github.com/phonohawk/extensible-uri/issues
Category:      Data, Codec, Network
Tested-With:   GHC == 7.0.3
Cabal-Version: >= 1.10
Build-Type:    Simple

Source-Repository head
    Type:     git
    Location: git://github.com/phonohawk/extensible-uri.git

Flag QuickCheck
    Description: Enable instance declarations for QuickCheck.
    Default:     True

Library
    Exposed-Modules:
        Codec.URI.PercentEncoding
        Data.URI

    Other-Modules:
        Data.URI.Internal
        Data.URI.Internal.Scheme
        Data.URI.Internal.UserInfo

    if flag(QuickCheck)
        Build-Depends:
            QuickCheck           == 2.4.*,
            quickcheck-instances == 0.2.*

    Build-Depends:
        ascii                 == 0.0.*,
        attempt               == 0.3.*,
        attoparsec            == 0.10.*,
        base                  == 4.*,
        base-unicode-symbols  == 0.2.*,
        bytestring            == 0.9.*,
        case-insensitive      == 0.4.*,
        control-monad-failure == 0.7.*,
        convertible-ascii     == 0.1.*,
        convertible-text      == 0.4.*,
        data-default          == 0.3.*,
        hashable              == 1.1.*,
        monad-control         == 0.3.*,
        semigroups            == 0.8.*,
        transformers          == 0.2.*,
        transformers-base     == 0.4.*,
        vector                == 0.9.*

    Default-Language:
        Haskell2010

    GHC-Options:
        -Wall
