Name:          extensible-uri
Synopsis:      Generic URIs that can be specialised to specific schemes
Description:
    .
    The purpose of this library is to provide an uniform way to
    manipulate generic and scheme-specific URIs in a type-safe and
    RFC-compliant manner.
    .
Version:       0.1
License:       PublicDomain
License-File:  COPYING
Author:        PHO <pho at cielonegro dot org>
Maintainer:    PHO <pho at cielonegro dot org>
Stability:     experimental
Homepage:      https://github.com/phonohawk/extensible-uri
Bug-Reports:   https://github.com/phonohawk/extensible-uri/issues
Category:      Data, Codec, Network
Tested-With:   GHC == 7.6.2
Cabal-Version: >= 1.10
Build-Type:    Simple

Source-Repository head
    Type:     git
    Location: git://github.com/phonohawk/extensible-uri.git

Flag QuickCheck
    Description: Enable instance declarations for QuickCheck.
    Default:     True

Library
    Exposed-Modules:
        Codec.URI.PercentEncoding
        Data.URI

    Other-Modules:
        Data.URI.Internal
        Data.URI.Internal.Scheme
        Data.URI.Internal.UserInfo

    if flag(QuickCheck)
        Build-Depends:
            QuickCheck == 2.5.*

    Build-Depends:
        attoparsec           == 0.10.*,
        base                 == 4.*,
        base-unicode-symbols == 0.2.*,
        blaze-builder        == 0.3.*,
        bytestring           == 0.10.*,
        case-insensitive     == 1.0.*,
        failure              == 0.2.*,
        hashable             == 1.2.*,
        primitive            == 0.5.*,
        semigroups           == 0.9.*,
        vector               == 0.10.*,
        vector-bytestring    == 0.0.*

    Default-Language:
        Haskell2010

    GHC-Options:
        -Wall
